--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">智能蓝牙通信</string>
+    <string name="app_name">智能通信</string>
     <string name="main_title_server">模拟服务端</string>
     <string name="main_title_client">模拟客户端</string>
     <string name="main_title_client2">客户端</string>
